fix: starts with w and ends with flow but wuth userid

--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -134,7 +134,7 @@ jobs:
         run: |
           aws ec2 modify-image-attribute \
           --image-id $AMI_ID \
-          --launch-permission '{"Add":[{"AccountId":"'"${{ secrets.DEMO_ACCOUNT_ID }}"'"}]}'
+          --launch-permission '{"Add":[{"UserId":"'"${{ secrets.DEMO_ACCOUNT_ID }}"'"}]}'
 
       - name: Get Launch Templates
         id: get-launch-template
