--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -150,32 +150,15 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_CLI_DEMO }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-      - name: Deploy Infrastructure in Demo Account
-        run: |
-          terraform init
-          terraform plan -out=tfplan
-          terraform apply -auto-approve tfplan
+      - name: Create new Launch Template
+        id: version-launch-template
+        run: aws ec2 create-launch-template-version --launch-template-id $launch_template_id  --source-version 1  --launch-template-data "{\"ImageId\":\"$AMI_ID\"}"
 
-      - name: Create New Launch Template Version
+      - name: Get ASG Name and Refresh
+        id: get-asg
         run: |
-          latest_version=$(aws ec2 create-launch-template-version \
-            --launch-template-id $launch_template_id \
-            --source-version 1 \
-            --launch-template-data "{\"ImageId\":\"$AMI_ID\"}" \
-            --query 'LaunchTemplateVersion.VersionNumber' --output text)
-          echo "LATEST_VERSION=$latest_version" >> $GITHUB_ENV
-
-      - name: Update Auto Scaling Group
-        run: |
-          aws autoscaling update-auto-scaling-group \
-            --auto-scaling-group-name $ASG_NAME \
-            --launch-template "LaunchTemplateId=$launch_template_id,Version=$LATEST_VERSION"
-
-      - name: Trigger Instance Refresh
-        run: |
-          REFRESH_ID=$(aws autoscaling start-instance-refresh \
-            --auto-scaling-group-name $ASG_NAME \
-            --query "InstanceRefreshId" --output text)
+          echo $ASG_NAME
+          REFRESH_ID=$(aws autoscaling start-instance-refresh --auto-scaling-group-name $ASG_NAME --query "InstanceRefreshId" --output text)
           echo "REFRESH_ID=$REFRESH_ID" >> $GITHUB_ENV
 
       - name: Monitor Instance Refresh
