fix: need to fix myself

--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -130,6 +130,10 @@ jobs:
                          echo "AMI_ID=${AMI_ID}" >> $GITHUB_ENV
         shell: bash
 
+      - name: Get Launch Templates
+        id: get-launch-template
+        run: echo "launch_template_id=$(aws ec2 describe-launch-templates | jq ".LaunchTemplates[0].LaunchTemplateId" | tr -d '"')" >> $GITHUB_ENV
+
       - name: Export ID to env and print to check
         id: export-ids
         run: |
