--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -132,7 +132,9 @@ jobs:
 
       - name: Get Launch Templates
         id: get-launch-template
-        run: echo "launch_template_id=$(aws ec2 describe-launch-templates | jq ".LaunchTemplates[0].LaunchTemplateId" | tr -d '"')" >> $GITHUB_ENV
+        run: |
+          LAUNCH_TEMPLATE_ID=$(aws ec2 describe-launch-templates --query 'LaunchTemplates[0].LaunchTemplateId' --output text)
+          echo "launch_template_id=$LAUNCH_TEMPLATE_ID" >> $GITHUB_ENV
 
       - name: Export ID to env and print to check
         id: export-ids
